--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,8 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 # Project exclude paths
 /target/
+
+# added by myself
+*.class
+*.iml
+.idea/
